Apache Tez Change Log
=====================

Release 0.9.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3627. Use queue name available in RegisterApplicationMasterResponse for publishing to ATS.
  TEZ-3610. TEZ UI 0.7 0.9 compatibility for url query params and tez-app sub-routes
  TEZ-3625. Dag.getVertex should obtain a readlock.
  TEZ-3624. Split multiple calls on the same line in TaskCommunicatorContextImpl.
  TEZ-3550. Provide access to sessionId/dagId via DagClient.
  TEZ-3267. Publish queue name to ATS as part of dag summary.
  TEZ-3609. Improve ATSv15 performance for DAG entities read calls.
  TEZ-3244. Allow overlap of input and output memory when they are not concurrent
  TEZ-3581. Add different logger to enable suppressing logs for specific lines.
  TEZ-3601. Add another HistoryLogLevel to suppress TaskAttempts at specific levels
  TEZ-3600. Fix flaky test: TestTokenCache
  TEZ-3589. add a unit test for amKeepAlive not being shutdown if an app takes a long time to launch.
  TEZ-3417. Reduce sleep time on AM shutdown to reduce test runtimes
  TEZ-3582. Exception swallowed in PipelinedSorter causing incorrect results.
  TEZ-3584. amKeepAliveService in TezClient should shutdown in case of AM failure.
  TEZ-3462. Task attempt failure during container shutdown loses useful container diagnostics
  TEZ-3579. Wrong configuration key for max slow start fraction in CartesianProductVertexManager.
  TEZ-3458. Auto grouping for cartesian product edge(unpartitioned case).
  TEZ-3574. Container reuse won't pickup extra dag level local resource.
  TEZ-3443. Remove a repeated/unused method from MRTask.
  TEZ-3551. FrameworkClient created twice causing minor delay.
  TEZ-3566. Avoid caching fs isntances in TokenCache after a point.
  TEZ-3568. Update SecurityUtils configuration to pick user provided configuration.
  TEZ-3561. Fix wrong tez tarball name in install.md.
  TEZ-3565. amConfig should check queuename isEmpty.